force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/amazonconnect__AC_ContactTraceRecord__c.object-meta.xml
<CustomObject>
    <label>AC Contact Trace Record</label>
    <nameField>
        <displayFormat>CTR {000000000}</displayFormat>
        <label>Contact Trace Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Trace Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>