force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AfterContactWorkEndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AfterContactWorkEndTimestamp__c</fullName>
    <label>After Contact Work End Timestamp</label>
    <type>DateTime</type>
</CustomField>