force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentARN__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentARN__c</fullName>
    <label>Agent ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>