force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentConnectedToAgentTimestamp__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentConnectedToAgentTimestamp__c</fullName>
    <label>Agent Connected To Agent Timestamp</label>
    <type>DateTime</type>
</CustomField>