force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentConnectionAttempts__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentConnectionAttempts__c</fullName>
    <label>Agent Connection Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>