force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentHierarchyGroups__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentHierarchyGroups__c</fullName>
    <label>Agent Hierarchy Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>