force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentInteractionDuration__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentInteractionDuration__c</fullName>
    <label>Agent Interaction Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>