force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentNumberOfHolds__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentNumberOfHolds__c</fullName>
    <label>Agent Number Of Holds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>