force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentRoutingProfileARN__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentRoutingProfileARN__c</fullName>
    <label>Agent Routing Profile ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>