force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentRoutingProfileName__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentRoutingProfileName__c</fullName>
    <label>Agent Routing Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>