force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AgentUsername__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentUsername__c</fullName>
    <label>Agent Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>