force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__Attributes__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Attributes__c</fullName>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>