force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__AWSAccountId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AWSAccountId__c</fullName>
    <label>AWS Account Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>