force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__Channel__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Channel__c</fullName>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VOICE</fullName>
            </value>
            <value>
                <fullName>CHAT</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>