force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__ConnectedToSystemTimestamp__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ConnectedToSystemTimestamp__c</fullName>
    <label>Connected To System Timestamp</label>
    <type>DateTime</type>
</CustomField>