force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__ContactDetails__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactDetails__c</fullName>
    <label>Contact Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>