force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__ContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactId__c</fullName>
    <externalId>true</externalId>
    <label>ContactId</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>