force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__CustomerEndpointAddress__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CustomerEndpointAddress__c</fullName>
    <label>Customer Endpoint Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>