force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__DisconnectReason__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DisconnectReason__c</fullName>
    <label>Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER_DISCONNECT</fullName>
            </value>
            <value>
                <fullName>AGENT_DISCONNECT</fullName>
            </value>
            <value>
                <fullName>THIRD_PARTY_DISCONNECT</fullName>
            </value>
            <value>
                <fullName>TELECOM_PROBLEM</fullName>
            </value>
            <value>
                <fullName>CONTACT_FLOW_DISCONNECT</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>