force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__InitialContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__InitialContactId__c</fullName>
    <label>Initial ContactId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>