force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__Initiation_Method__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Initiation_Method__c</fullName>
    <label>Initiation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INBOUND</fullName>
            </value>
            <value>
                <fullName>OUTBOUND</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
            <value>
                <fullName>CALLBACK</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>QUEUE_TRANSFER</fullName>
            </value>
            <value>
                <fullName>DISCONNECT</fullName>
            </value>
            <value>
                <fullName>EXTERNAL_OUTBOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>