force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__InstanceARN__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__InstanceARN__c</fullName>
    <label>Instance ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>