force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__NextContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__NextContactId__c</fullName>
    <label>Next ContactId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>