force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__PhoneCall__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__PhoneCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PhoneCall</label>
    <referenceTo>amazonconnect__AC_PhoneCall__c</referenceTo>
    <relationshipName>Contact_Trace_Records</relationshipName>
    <type>Lookup</type>
</CustomField>