force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__PreviousContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__PreviousContactId__c</fullName>
    <label>Previous ContactId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>