force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__QueueARN__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__QueueARN__c</fullName>
    <label>Queue ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>