force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__QueueDuration__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__QueueDuration__c</fullName>
    <label>Queue Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>