force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__QueueName__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__QueueName__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>