force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__RecordingDeletionReason__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RecordingDeletionReason__c</fullName>
    <label>Recording Deletion Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>