force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__RecordingLocation__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RecordingLocation__c</fullName>
    <label>Recording Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>