force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__RecordingStatus__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RecordingStatus__c</fullName>
    <label>Recording Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVAILABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>