force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__SystemEndpointAddress__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SystemEndpointAddress__c</fullName>
    <label>System Endpoint Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>