force-app/main/default/objects/amazonconnect__AC_ContactTraceRecord__c/fields/amazonconnect__TransferredToEndpoint__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__TransferredToEndpoint__c</fullName>
    <label>Transferred To Endpoint</label>
    <length>20</length>
    <type>Text</type>
</CustomField>